--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "skill-swap-platform",
+  "name": "skill-swap-backend",
   "version": "1.0.0",
-  "description": "A platform for users to exchange skills with each other",
+  "description": "Backend for Skill Swap Platform",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "cd backend && npm run dev",
-    "client": "cd frontend && npm start",
-    "build": "cd frontend && npm run build",
-    "install-all": "npm install && cd backend && npm install && cd ../frontend && npm install",
-    "setup": "npm run install-all && npm run build"
+    "dev": "node dist/index.js"
   },
   "keywords": [
     "skill-swap",
-    "platform",
-    "exchange",
-    "learning"
+    "backend",
+    "api"
   ],
   "author": "Team Alpha",
   "license": "MIT",
-  "devDependencies": {
-    "@types/better-sqlite3": "^7.6.13",
-    "concurrently": "^8.2.2"
-  },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
-    "sqlite": "^5.1.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "express-validator": "^7.2.1",
+    "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "socket.io": "^4.7.2",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
