--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,24 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.7.4",
@@ -43,6 +52,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "typescript": "^4.9.5"
